--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-loading-overlay": "^1.0.1"
+  }
 }
