--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "directories": {
     "example": "example"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-loading-overlay": "^1.0.1"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
