--- a/example/package.json
+++ b/example/package.json
@@ -5,11 +5,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@valearna/paginated-list": "^1.0.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.4"
+    "paginated-list": "file:..",
+    "prop-types": "^15.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
