--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "dependencies": {
     "paginated-list": "file:..",
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.6.2",
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
