--- a/example/package.json
+++ b/example/package.json
@@ -6,8 +6,10 @@
   "private": true,
   "dependencies": {
     "paginated-list": "file:..",
-    "prop-types": "^15.6.2",
-    "react-scripts": "^1.1.4"
+    "prop-types": "^15.7.2"
+  },
+  "devDependencies": {
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
